--- a/1-html-css/html/index.html
+++ b/1-html-css/html/index.html
@@ -7,7 +7,7 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph!</p>
-<img src="html.png" alt="Logo do HTML 5">
+<img src="..\img\html.png" alt="Logo do HTML 5">
 
 </body>
 </html>
