--- a/2-html-css/html/index2.html
+++ b/2-html-css/html/index2.html
@@ -11,18 +11,25 @@
     <header>
 
     </header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível
-            <strong class="destaque-titulo"> com um Front-end de qualidade!</strong></h1>
-        <!--definindo uma classe para uma tag qualquer-->
-            <p>Olá! Sou Joana Santos, desenvolvedora Front-end com
+    <main class="apresentacao">
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-titulo">
+                Eleve seu negócio digital a outro nível
+                <strong class="destaque-titulo"> com um Front-end de qualidade!</strong>
+            </h1>
+            <!--definindo uma classe para uma tag qualquer-->
+            <p class=" apresentacao-conteudo-texto">Olá! Sou Joana Santos, desenvolvedora Front-end com
             especialidade em React, HTML e CSS. Ajudo pequenos
             negócios e designers a colocarem em prática boas ideias.
             Vamos conversar?</p>
-            <a href="https://www.instagram.com">Instagram</a>
-            <a href="https://github.com/">Github</a>
+            <div class="apresentacao-conteudo-links">
+                <a class="apresentacao-conteudo-links-link" href="https://www.instagram.com">Instagram</a>
+                <a class="apresentacao-conteudo-links-link" href="https://github.com/">Github</a>
+            </div>
 
-            <img src="..\img\Imagem.png" alt="foto da Joana">
+        </section>
+
+        <img src="..\img\Imagem.png" alt="foto da Joana">
     </main>
     <footer>
 
