--- a/3-html-css/index.html
+++ b/3-html-css/index.html
@@ -14,13 +14,12 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque">com um Front-end de qualidade!
+            class="titulo-destaque"> com um Front-end de qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
-            Front-end com especialidade em React, HTML e
-            CSS. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
+            <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Etiam eget ante auctor, dignissim
+                leo eleifend, mattis est. Duis fermentum massa vel semper eleifend.
+                Morbi vulputate risus dolor, eget tempor purus maximus ac.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
