--- a/3-html-css/index.html
+++ b/3-html-css/index.html
@@ -22,8 +22,18 @@
                 Morbi vulputate risus dolor, eget tempor purus maximus ac.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails">GitHub</a>
+                <a class="apresentacao__links__link" href="https://instagram.com/">
+                    <img src="img/github.png" alt="logo do GitHub">
+                    GitHub
+                </a>
+                <a class="apresentacao__links__link" href="https://linkedin.com/">
+                    <img src="img/linkedin.png" alt="logo do Linkedin">
+                    Linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://twitch.tv/">
+                    <img src="img/twitch.png" alt="logo da Twitch">
+                    Twitch
+                </a>
             </div>
         </section>
         <img src="img/Imagem.png" alt="Foto da Joana Santos programando">
