--- a/3-html-css/index.html
+++ b/3-html-css/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-link">Home</a>
+            <a class="cabecalho-menu-link">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
@@ -38,7 +43,9 @@
         </section>
         <img src="img/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer></footer>
+    <footer>
+        <p class="rodape">Desenvolvido por Ana =D</p>
+    </footer>
 </body>
 
 </html>
