arrumando em pastas

--- a/3-html-css/html/index.html
+++ b/3-html-css/html/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-link">Home</a>
-            <a class="cabecalho-menu-link">Sobre mim</a>
+            <a class="cabecalho-menu-link" href="index.html">Home</a>
+            <a class="cabecalho-menu-link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -28,20 +28,20 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://instagram.com/">
-                    <img src="img/github.png" alt="logo do GitHub">
+                    <img src="../img/github.png" alt="logo do GitHub">
                     GitHub
                 </a>
                 <a class="apresentacao__links__link" href="https://linkedin.com/">
-                    <img src="img/linkedin.png" alt="logo do Linkedin">
+                    <img src="../img/linkedin.png" alt="logo do Linkedin">
                     Linkedin
                 </a>
                 <a class="apresentacao__links__link" href="https://twitch.tv/">
-                    <img src="img/twitch.png" alt="logo da Twitch">
+                    <img src="../img/twitch.png" alt="logo da Twitch">
                     Twitch
                 </a>
             </div>
         </section>
-        <img src="img/Imagem.png" alt="Foto da Joana Santos programando">
+        <img src="../img/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
         <p class="rodape">Desenvolvido por Ana =D</p>
