adicionando uma nova página

--- a/3-html-css/html/about.html
+++ b/3-html-css/html/about.html
@@ -2,10 +2,48 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sobre mim</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
-        <h1>Sobre mim</h1>
+        <header class="cabecalho">
+            <nav class="cabecalho-menu">
+                <a class="cabecalho-menu-link" href="index.html">Home</a>
+                <a class="cabecalho-menu-link" href="about.html">Sobre mim</a>
+                <a class="cabecalho-menu-link" href="curriculo.html">Curriculo</a>
+            </nav>
+        </header>
+
+        <main class="apresentacao">
+            <section class="apresentacao__conteudo">
+                <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+                <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Etiam eget ante auctor, dignissim
+                    leo eleifend, mattis est. Duis fermentum massa vel semper eleifend.
+                    Morbi vulputate risus dolor, eget tempor purus maximus ac.</p>
+                    <p class="apresentacao__conteudo__texto">Duis ultricies diam vel dui
+                        porta ornare. Mauris vestibulum mi justo, at laoreet nisl dignissim
+                        nec. Nunc rutrum nisi et odio pulvinar viverra. Quisque pellentesque
+                        lacus at turpis elementum semper. Vestibulum a sapien sem. Aliquam
+                        erat volutpat. Pellentesque finibus cursus nisl non bibendum. Sed
+                        tincidunt sem eu augue condimentum consectetur condimentum quis dui.
+                        Curabitur laoreet, augue a malesuada sagittis, augue augue luctus
+                        mauris, nec imperdiet sem risus semper nulla.
+
+                        Morbi non tellus quis sem aliquam viverra. Proin interdum tempor
+                        pharetra. Donec iaculis elit a lobortis porta. Phasellus pretium
+                        turpis quis magna tincidunt ullamcorper a eget arcu. Pellentesque
+                        faucibus sapien blandit, condimentum erat a, facilisis ante. Mauris
+                        ut porta dui, non scelerisque augue. Suspendisse tempus erat felis,
+                        non hendrerit leo vestibulum quis.</p>
+            </section>
+            <img src="../img/Imagem.png" alt="Foto da Joana Santos programando">
+        </main>
+
+        <footer>
+            <p class="rodape">Desenvolvido por Ana =D</p>
+        </footer>
     </body>
 </html>
