--- a/3-html-css/html/index.html
+++ b/3-html-css/html/index.html
@@ -14,6 +14,7 @@
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-link" href="index.html">Home</a>
             <a class="cabecalho-menu-link" href="about.html">Sobre mim</a>
+            <a class="cabecalho-menu-link" href="curriculo.html">Curriculo</a>
         </nav>
     </header>
     <main class="apresentacao">
