--- a/4-html-css/html/about.html
+++ b/4-html-css/html/about.html
@@ -39,7 +39,7 @@
                     ut porta dui, non scelerisque augue. Suspendisse tempus erat felis,
                     non hendrerit leo vestibulum quis.</p>
             </section>
-            <img src="../img/Imagem.png" alt="Foto da Joana Santos programando">
+            <img class="apresentacao-imagem" src="../img/Imagem.png" alt="Foto da Joana Santos programando">
         </main>
 
         <footer>
