--- a/4-html-css/html/curriculo.html
+++ b/4-html-css/html/curriculo.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>    
         </section>
-        <img src="../img/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao-imagem" src="../img/imagem.png" alt="Foto da Joana Santos programando">
     </main> 
 
     <footer>
