--- a/4-html-css/html/index.html
+++ b/4-html-css/html/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img src="../img/Imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao-imagem" src="../img/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
         <p class="rodape">Desenvolvido por Ana =D</p>
