--- a/5-praticando/html/index.html
+++ b/5-praticando/html/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua.</h1>
-    
+    <section class="conteiner principal">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua.
+        </h1>
+        <img src="../img/Combo.png" alt="combo+">
+    </section>
+
 </body>
 </html>
