--- a/5-praticando/html/index.html
+++ b/5-praticando/html/index.html
@@ -13,7 +13,8 @@
             aliqua.
         </h1>
         <img src="../img/Combo.png" alt="combo+">
+        <a href="www.alura.com.br" class="conteiner-botao">Finibus Bonorum et Malorum*</a>
+        <a href="www.alura.com.br" class="conteiner-botao">Ut enim ad minima veniam</a>
     </section>
-
 </body>
 </html>
