--- a/5-praticando/html/index.html
+++ b/5-praticando/html/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <section class="conteiner principal">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua.
-        </h1>
-        <img src="../img/Combo.png" alt="combo+">
-        <a href="www.alura.com.br" class="conteiner-botao">Finibus Bonorum et Malorum*</a>
-        <a href="www.alura.com.br" class="conteiner-botao">Ut enim ad minima veniam</a>
+        <div>
+            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.
+            </h1>
+            <img src="../img/Combo.png" alt="combo+">
+            <a href="www.alura.com.br" class="conteiner-botao">Finibus Bonorum et Malorum*</a>
+            <a href="www.alura.com.br" class="conteiner-botao botao-secundario">Ut enim ad minima veniam</a>
+        </div>
+        
     </section>
 </body>
 </html>
