utilizando arquivo externo

--- a/JAVASCRIPT/index.html
+++ b/JAVASCRIPT/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -71,16 +71,6 @@
 
 			</section>
 		</main>
-
-		<script>
-			//alert("olá, mundo");
-			console.log("oi, mundo");
-			//console.log(document.querySelector("h1"));
-			var titulo = document.querySelector("h1");
-			console.log(titulo); //imprime a variavel
-			console.log(titulo.textContent); //imprime o conteudo da variavel
-			titulo.textContent = "Aparecida Nutricionista"; //alterando o conteudo da variavel
-		</script>
-		
+		<script src="js/principal.js"></script>
 	</body>
 </html>
